--- a/package.json
+++ b/package.json
@@ -67,5 +67,5 @@
       "git add"
     ]
   },
-  "homepage": "http://ashoful.github.io/room4-task"
+  "homepage": "https://ashoful.github.io/room4-task"
 }
